apps/catalogs/docker/envoy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
    - name: main-listener
      address:
        socket_address: { address: 0.0.0.0, port_value: 8080 }
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              config:
                stat_prefix: grpc_json
                codec_type: AUTO
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route: { cluster: grpc-backend, auto_host_rewrite: true, timeout: { seconds: 60 } }
                      cors:
                        allow_origin_string_match:
                          safe_regex:
                            google_re2: { }
                            regex: ".*"
                http_filters:
                  - name: envoy.cors
                  - name: envoy.grpc_web
                  - name: envoy.grpc_json_transcoder
                    config:
                      proto_descriptor: "/data/api_descriptor.pb"
                      services: ["catalogs.CatalogManager"]
                      print_options:
                        add_whitespace: true
                        always_print_primitive_fields: true
                        always_print_enums_as_ints: false
                        preserve_proto_field_names: false
                  - name: envoy.router

  clusters:
    - name: grpc-backend
      connect_timeout: 15s
      type: logical_dns
      lb_policy: round_robin
      dns_lookup_family: V4_ONLY
      http2_protocol_options: {}
      tls_context:
        sni: grpc.catalogs.ignition-app.xyz
        common_tls_context:
          alpn_protocols: h2,http/1.1
      hosts:
        - socket_address:
            address: grpc.catalogs.ignition-app.xyz
            port_value: 443
